<resources>
    <!-- Название программы -->
    <string name="app_name">TSN_DEMO_03_Questionnaire</string>

    <!-- Текстовые константы -->
    <string name="Мужчина">Мужчина</string>
    <string name="Женщина">Женщина</string>
    <string name="Кто_Вы">Кто Вы?</string>
    <string name="Введите_ФИО">введите сюда свое ФИО</string>
    <string name="Укажите_пол">Укажите пол:</string>
    <string name="мужчина">мужчина</string>
    <string name="Выберите_образование">Выберите образование:</string>
    <string name="Ваша_стана">Ваша страна:</string>
    <string name="ИТОГО">ИТОГО</string>
    <string name="высшее">высшее</string>
    <string name="среднее">среднее</string>
    <string name="начальное">начальное</string>
    <string name="Сводные_данные">Сводные данные:</string>
    <string name="Назад">Назад</string>
    <string name="Выход">Выход</string>
    <string name="Вы">Вы:</string>
    <string name="Ваш_пол">Ваш пол:</string>
    <string name="Ваше_образование">Образование:</string>
    <string name="Страна">Страна:</string>
    <string name="Ввод_ФИО">ФИО</string>
    <string name="Ввод_цвета">Какой ваш любимый цвет?</string>
    <string name="Ваш_цвет">Ваш любимый цвет:</string>
    <string name="Хинт_цвет">Введите сюда ваш любимый цвет</string>
    <string name="Вы_робот">Вы робот?</string>
    <string name="Робот">Робот</string>
    <string name="Не_робот">Не робот</string>
    <string name="Игра">Какая игра вам нравится больше?</string>
    <string name="Ваша_игра">Ваша любима игра:</string>
    <string name="Шахматы">Шахматы</string>
    <string name="Волейбол">Волейбол</string>
    <string name="Футбол">Футбол</string>
    <string name="Манчкин">Баскетбол</string>


</resources>
